<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.sebastianczarnecki.modernismquizapp.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/tak" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pierwszy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/drugi"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:alpha=".75"
        android:background="#FAFAFA"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/forgotten"
        android:textSize="12sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/drugi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:alpha=".8"
        android:background="#FAFAFA"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="Modernism Quiz App"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Dates"
        android:text="@string/date"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/Score"
        android:onClick="eatCookie"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:alpha=".9"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:background="#212121"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Location"
        android:text="@string/location"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:layout_above="@+id/Score"
        android:alpha=".9"
        android:background="#212121"
        android:textColor="@android:color/white"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Score"
        android:text="@string/gallery"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:alpha=".9"
        android:background="#212121"
        android:textColor="@android:color/white"

        />

    <ImageView
        android:id="@+id/podpis"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha=".9"
        android:paddingBottom="12dp"
        android:paddingRight="-12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/podpis" />

</RelativeLayout>



</android.support.constraint.ConstraintLayout>
